--- a/views/templates/partials/matchs.phtml
+++ b/views/templates/partials/matchs.phtml
@@ -1,3 +1,4 @@
+<main>
 <?php
 if (empty($games)) {
     echo '<p>Aucune partie trouvée.</p>';
@@ -32,3 +33,4 @@ if (empty($games)) {
     echo '</ul>';
 }
 ?>
+</main>
